asset/src/scss/global/_structure.scss
// *****************************************************************
// ADDITIONAL RESET
// *****************************************************************
:focus { 
	outline:0;
}
::selection {
	background: #000; /* Safari */
	color: $white;
}
::-moz-selection {
	background: #000; /* Firefox */
	color: $white;
}

.svg-defs {
	display: none;
}

html, body {
	height: 100%;
}

body {
	background: $midpurple;
	color: $newpurple;
}

p {
	margin: 20px 10%;

	@include breakpoint(medium) {
		margin: 0 auto;
		margin-top: 25px;
		margin-bottom: 25px;
		width: 720px;
	}

	@include breakpoint(large) {
		width: 800px;
		margin-top: 35px;
		margin-bottom: 35px;
	}

	a {
		font-weight: 400;
		font-style: italic;
		text-decoration: none;
		border-bottom: dotted 1px $thered;
		color: $thered;
	}
}

h1 {
	z-index: 12;
	position: relative;

	&.main {
		padding: 30px 0;
		width: 100%;
		background: $white;
		color: $satpurple;
		margin-left: -0.15em;
		padding-right: 0.15em;

		.word {
			position: relative;
			z-index: 2;
		}

		.icon {
			width: 100%;
			// height: 70%; retina ipads go crazy with this
			height: 70px;
			position: absolute;
			top: 15%;
			left: 0;
			z-index: 1;

			svg {
				fill: #f7f7f7;
				// height: 100%;
				height: 70px;
				margin-left: 0.3em;
			}
		}
	}	
}


// *****************************************************************
// MAIN BLOCKS
// *****************************************************************
section {
	overflow: auto;
}

.block {
	position: relative;
	z-index: 10;
	background: $white;
	width: 100%;
}

.spaced {
	padding: 40px 0;
}
	
#ajax-content {
	overflow: auto;
}

.content {
	margin-top: $headerHeight;
}

.block {
	h1 {
		margin: 20px 0;
	}
}


// *****************************************************************
// FOOTER
// *****************************************************************
section.footer {
	width: 100%;
	background: $midpurple;
	position: relative;
	z-index: 10;

	footer {
		color: $lightestpurple;
		width: 80%;
		padding: 30px 10%;
	}
}

